fix: 移除footer的上框線以及修正子選單overflow的問題

--- a/src/assets/scss/components/footer.scss
+++ b/src/assets/scss/components/footer.scss
@@ -1,6 +1,5 @@
 .footer {
   background-color: $primary-50; // #FFEDF1
-  border-top: 1px solid $primary-100;
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
